<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kalkulator1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="180dp"
        android:layout_gravity="center"
        android:textColor="@color/teal_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kalkulator_sederhana"
        android:textSize="20dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bilangan_pertama"
        android:textSize="10dp"
        android:textStyle="bold"
        android:background="@color/purple_500"
        />
        <EditText
            android:id="@+id/edit_bilangan_pertama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginBottom="5dp"
            />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bilangan_kedua"
        android:textSize="10dp"
        android:textStyle="bold"
        android:background="@color/purple_500"
        />
    <EditText
        android:id="@+id/edit_bilangan_kedua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginBottom="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_tambah"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambah" />
        <Button
            android:id="@+id/button_kurang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kurang"
            android:layout_marginRight="5dp"/>
        <Button
            android:id="@+id/button_kali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kali"
            android:layout_marginRight="5dp"/>
        <Button
            android:id="@+id/button_bagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bagi"
            android:layout_marginRight="5dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/text_hasil_kalkulator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="10pt"
        android:text="@string/hasil_kalkulator_sederhana"/>

</LinearLayout>